[package]
name = "md2pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
pulldown-cmark = "0.12"
printpdf = { version = "0.7", features = ["embedded_images"] }
lopdf = "0.31"
clap = { version = "4", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
